evaluator 89% on tests